src/app/globals.css
@import "tailwindcss";
@import "swiper/css";
@import "swiper/css/navigation";
@import "swiper/css/pagination";

/* 참고 문헌 https://tailwindcss.com/docs/theme#default-theme-variable-reference */
/* 새로운 클래스를 만들고 싶으면 @layer, 기존값만 확장하고 싶다면 @theme*/

@theme {
  /* color */
  --color-primary: oklch(0.704 0.216 275.7);
  --color-primary-hover: oklch(0.64 0.23 275.7);

  --color-secondary: oklch(0.8 0.05 250);
  --color-secondary-hover: oklch(0.75 0.06 250);

  --color-success: oklch(0.78 0.2 140);
  --color-success-hover: oklch(0.72 0.23 140);

  --color-danger: oklch(0.68 0.25 27);
  --color-danger-hover: oklch(0.62 0.28 27);

  --color-outlined: oklch(0.88 0.03 250);
  --color-outlined-hover: oklch(0.83 0.04 250);

  /* spacing */
  --spacing-xs: 0.125rem; /* 2 */
  --spacing-sm: 0.25rem; /*  4*/
  --spacing-md: 0.375rem; /*  6*/
  --spacing-lg: 0.5rem; /*  8*/
  --spacing-xl: 1rem; /* 16 */
  --spacing-2xl: 1.5rem; /* 24 */
  --spacing-3xl: 2rem; /* 32 */

  /* radius 1rem = 16px*/
  --radius-xs: 0.125rem; /* 2 */
  --radius-sm: 0.25rem; /*  4*/
  --radius-md: 0.375rem; /*  6*/
  --radius-lg: 0.5rem; /*  8*/
  --radius-xl: 0.75rem; /*  12*/
  --radius-2xl: 1rem; /* 16 */
  --radius-3xl: 1.5rem; /* 24 */
  --radius-4xl: 2rem; /* 32 */

  /* text */
  /* Heading styles */
  --text-h1: 2.25rem; /* 36px */
  --text-h1--line-height: 2.75rem; /* 44px */
  --text-h2: 1.875rem; /* 30px */
  --text-h2--line-height: 2.25rem; /* 36px */
  --text-h3: 1.5rem; /* 24px */
  --text-h3--line-height: 2rem; /* 32px */

  /* Body styles */
  --text-body-lg: 1rem; /* 16px */
  --text-body--line-height: 1.5rem; /* 24px */

  --text-body-md: 0.875rem; /* 14px */
  --text-body-md--line-height: 1.25rem; /* 20px */

  --text-body-sm: 0.75rem; /* 12px */
  --text-body-sm--line-height: 1rem; /* 16px */

  /* Caption */
  --text-caption: 0.625rem; /* 10px */
  --text-caption--line-height: 1rem; /* 16px */
}

body {
  min-width: 300px;
  min-height: 600px;
  width: 100dvw;
  height: 100dvh;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

